[package]
name = "quicsock"
version = "0.3.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
description = "High-level and high-performance data transfer library"
repository = "https://github.com/shellrow/quicsock"
readme = "README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
netdev = "0.29"
quinn = "0.11"
quinn-proto = "0.11"
bytes = "1"
tokio = { version = "1", features = ["io-util", "macros", "sync", "rt", "net", "fs", "io-std", "signal", "process"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2.1"
rcgen = "0.13"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.9", features = ["v4", "fast-rng", "macro-diagnostics"]}
clap = { version = "4.4", features = ["derive", "string"] }
tracing-subscriber = "0.3.0"

[[example]]
name = "send_file"
path = "examples/send_file.rs"

[[example]]
name = "receive_file"
path = "examples/receive_file.rs"
